# ross-search-cloning

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  highlife.h  highlife_driver.c  highlife_main.c  highlife_map.c  model_driver.c
docs/: Doxyfile
example-grids/: 11x7-maze.txt  12x8-empty.txt  13x7-empty.txt  7x9-impossible.txt  7x9-v1.txt  7x9-v2.txt
src/: CMakeLists.txt  director.c  director.h  driver.c  driver.h  highlife.main.c  mapping.c  mapping.h  search.main.c  state.c  state.h  utils.h
